# gpt-index-poc

./: .envrc.example  .gitignore  .vimrc.lua  LICENSE  README.md  index.json  justfile  package-lock.json  package.json  pyproject.toml  pyrightconfig-example.json
docs/: notion.http
notion/: generate-index-from-database.py  generate-index-from-pages.py  generate-index.py  query-index.py
notion/utils/: list-ids.py  list-page-ids.py
starter-tutorial/: run.py  train.py
